force-app/main/default/objects/Policy__c/Policy__c.object-meta.xml
<CustomObject>
    <label>Application/Policy</label>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application/Policy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>