force-app/main/default/objects/Policy__c/fields/Account_Number_Unique_Controll__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Unique_Controll__c</fullName>
    <label>Account Number Unique Control</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>