force-app/main/default/objects/Policy__c/fields/Account_Open_Claims__c.field-meta.xml
<CustomField>
    <fullName>Account_Open_Claims__c</fullName>
    <description>Open Claims on Firm</description>
    <formula>Account__r.Open_Claims__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_Open Claims</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>