force-app/main/default/objects/Policy__c/fields/Accounting_Processed__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Processed</label>
    <type>Checkbox</type>
</CustomField>