force-app/main/default/objects/Policy__c/fields/Active1__c.field-meta.xml
<CustomField>
    <fullName>Active1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Actrive Policy flag used by internal code, updated by nightly batch process.</description>
    <label>Active1</label>
    <type>Checkbox</type>
</CustomField>