force-app/main/default/objects/Policy__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>if(AND(RecordType.DeveloperName = &apos;Policy&apos; ,Expiration_Date__c &gt; TODAY(), Effective_Date__c &lt;= TODAY(),OR(ISNULL(Cancel_Date__c),Cancel_Date__c&gt; TODAY())),true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>