force-app/main/default/objects/Policy__c/fields/Active_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Active_Blocks__c</fullName>
    <label>Active Blocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>