force-app/main/default/objects/Policy__c/fields/Active_Laywers__c.field-meta.xml
<CustomField>
    <fullName>Active_Laywers__c</fullName>
    <description>Number of active lawyers on a policy (omits any deleted lawyer)</description>
    <inlineHelpText>Lawyer count without deleted</inlineHelpText>
    <label>Active Lawyers</label>
    <summaryFilterItems>
        <field>Policy_Lawyer__c.Deleted_Date__c</field>
        <operation>equals</operation>
        <value>&quot;&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Lawyer__c.Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>