force-app/main/default/objects/Policy__c/fields/ADJ_MOD__c.field-meta.xml
<CustomField>
    <fullName>ADJ_MOD__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>ADJ. MOD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>