force-app/main/default/objects/Policy__c/fields/Aggregate_Limit_For_All_Claims__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit_For_All_Claims__c</fullName>
    <formula>Aggregate_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>