force-app/main/default/objects/Policy__c/fields/Aggregate_Limit_History__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit_History__c</fullName>
    <label>Aggregate Limit History</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>