force-app/main/default/objects/Policy__c/fields/All_Claims_Incurred__c.field-meta.xml
<CustomField>
    <fullName>All_Claims_Incurred__c</fullName>
    <description>Sum of Reserve Incurred amount from All Claims</description>
    <label>Policy Incurred</label>
    <summarizedField>Policy_Claim__c.Claim_Incurred_New__c</summarizedField>
    <summaryForeignKey>Policy_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>