force-app/main/default/objects/Policy__c/fields/AOP_Adjustment_Comment__c.field-meta.xml
<CustomField>
    <fullName>AOP_Adjustment_Comment__c</fullName>
    <label>AOP Adjustment Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>