force-app/main/default/objects/Policy__c/fields/AOP_Adjustment_Debit_only_allowed__c.field-meta.xml
<CustomField>
    <fullName>AOP_Adjustment_Debit_only_allowed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AOP Adjustment (Debit only allowed)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>