force-app/main/default/objects/Policy__c/fields/AOP_Factor__c.field-meta.xml
<CustomField>
    <fullName>AOP_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <description>For sum of area of practice</description>
    <label>AOP Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>