force-app/main/default/objects/Policy__c/fields/AOP_Master_Factor__c.field-meta.xml
<CustomField>
    <fullName>AOP_Master_Factor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AOP Master Factor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Factor__c.Factor_Type__c</field>
            <operation>equals</operation>
            <value>AOP</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Factor__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>