force-app/main/default/objects/Policy__c/fields/AOP_Override__c.field-meta.xml
<CustomField>
    <fullName>AOP_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AOP Override</label>
    <type>Checkbox</type>
</CustomField>