force-app/main/default/objects/Policy__c/fields/AOP_Override_Value__c.field-meta.xml
<CustomField>
    <fullName>AOP_Override_Value__c</fullName>
    <label>AOP Override Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>