force-app/main/default/objects/Policy__c/fields/AOP_Percentage__c.field-meta.xml
<CustomField>
    <fullName>AOP_Percentage__c</fullName>
    <description>Sum percentage of Policy AOP</description>
    <label>AOP Percentage</label>
    <summarizedField>Policy_AOP__c.Percentage__c</summarizedField>
    <summaryForeignKey>Policy_AOP__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>