force-app/main/default/objects/Policy__c/fields/App_Approval_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>App_Approval_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App Approval Acknowledge</label>
    <type>Checkbox</type>
</CustomField>