force-app/main/default/objects/Policy__c/fields/App_Approval_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Approval_Name__c</fullName>
    <label>App Approval Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>