force-app/main/default/objects/Policy__c/fields/Application_Status_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Tracking__c</fullName>
    <label>Application Status Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application open</fullName>
            </value>
            <value>
                <fullName>Firm Renewal Quotes</fullName>
            </value>
            <value>
                <fullName>Firm info</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Additional Firm Info</fullName>
            </value>
            <value>
                <fullName>Quote Acceptance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>