force-app/main/default/objects/Policy__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>Type of application that is being created.</description>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Type</valueSetName>
    </valueSet>
</CustomField>