force-app/main/default/objects/Policy__c/fields/ARDC_Cliam_Sublimit_Per_Policy__c.field-meta.xml
<CustomField>
    <fullName>ARDC_Cliam_Sublimit_Per_Policy__c</fullName>
    <label>ARDC Claim Sublimit Per Policy</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>