force-app/main/default/objects/Policy__c/fields/Associate_Review_Procedures_Comment__c.field-meta.xml
<CustomField>
    <fullName>Associate_Review_Procedures_Comment__c</fullName>
    <label>Associate Review Procedures Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>