force-app/main/default/objects/Policy__c/fields/Attorney_Training_Comment__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Training_Comment__c</fullName>
    <label>Attorney Training Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>