force-app/main/default/objects/Policy__c/fields/Attorney_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Turnover__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attorney Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>