force-app/main/default/objects/Policy__c/fields/Attorney_Turnover_Comment__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Turnover_Comment__c</fullName>
    <label>Attorney Turnover Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>