force-app/main/default/objects/Policy__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <label>Base Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>