force-app/main/default/objects/Policy__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>