force-app/main/default/objects/Policy__c/fields/Billing_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Billing_Procedures__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billing Procedures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>