force-app/main/default/objects/Policy__c/fields/Billing_Procedures_Comment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Procedures_Comment__c</fullName>
    <label>Billing Procedures Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>