force-app/main/default/objects/Policy__c/fields/Billings_per_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Billings_per_Attorney__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Billings per Attorney</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>