force-app/main/default/objects/Policy__c/fields/Billings_per_Attorney_Comment__c.field-meta.xml
<CustomField>
    <fullName>Billings_per_Attorney_Comment__c</fullName>
    <label>Billings per Attorney Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>