force-app/main/default/objects/Policy__c/fields/Bind_Date_Delta__c.field-meta.xml
<CustomField>
    <fullName>Bind_Date_Delta__c</fullName>
    <description>Difference between Policy Effective and Bind Date</description>
    <formula>report_Bind_Date__c - report_effective_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bind Date Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>