force-app/main/default/objects/Policy__c/fields/Bind_Policy_JSON__c.field-meta.xml
<CustomField>
    <fullName>Bind_Policy_JSON__c</fullName>
    <label>Bind Policy JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>