force-app/main/default/objects/Policy__c/fields/Board_Report_YOY_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Board_Report_YOY_Quarter__c</fullName>
    <description>Value for calculated YOY comparison reports by quarter</description>
    <formula>DATE(2024,9,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAR Board Report - YOY Quarter</label>
    <type>Date</type>
</CustomField>