force-app/main/default/objects/Policy__c/fields/Bound_Date__c.field-meta.xml
<CustomField>
    <fullName>Bound_Date__c</fullName>
    <label>Bound Date</label>
    <type>DateTime</type>
</CustomField>