force-app/main/default/objects/Policy__c/fields/Bound_Dividend_Credit__c.field-meta.xml
<CustomField>
    <fullName>Bound_Dividend_Credit__c</fullName>
    <description>Value of dividend credit when policy was bound</description>
    <label>Bound Dividend Credit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>