force-app/main/default/objects/Policy__c/fields/Bound_Lawyer_Count__c.field-meta.xml
<CustomField>
    <fullName>Bound_Lawyer_Count__c</fullName>
    <label>Original Lawyer Count</label>
    <summaryFilterItems>
        <field>Policy_Lawyer__c.Added_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Lawyer__c.Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>