force-app/main/default/objects/Policy__c/fields/Bypass_Default_County_Factor__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Default_County_Factor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Default County Factor</label>
    <type>Checkbox</type>
</CustomField>