force-app/main/default/objects/Policy__c/fields/Calculated_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Dividend__c</fullName>
    <description>Determines which portion of policy to calculate dividend on</description>
    <formula>IF( (Policy_Effective_Year__c = TEXT(Current_Dividend_Year__c)) , Effective_Year_Dividend__c , Dividend_Expiration_Year_Earned__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xxx-Calculated Dividend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>