force-app/main/default/objects/Policy__c/fields/Calculated_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Expiration_Date__c</fullName>
    <formula>IF (Is_Canceled__c, Cancel_Date__c,  Expiration_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Expiration Date</label>
    <type>Date</type>
</CustomField>