force-app/main/default/objects/Policy__c/fields/Calculated_Policy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Policy_Percentage__c</fullName>
    <formula>IF( (Policy_Effective_Year__c = TEXT(Current_Dividend_Year__c)) , Effective_Year_Percentage__c  , Expiration_Year_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Policy Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>