force-app/main/default/objects/Policy__c/fields/Calculated_Primary__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Primary__c</fullName>
    <label>Calculated_Primary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>