force-app/main/default/objects/Policy__c/fields/Cancel_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Issue_Date__c</fullName>
    <label>Cancel Issue Date</label>
    <type>Date</type>
</CustomField>