force-app/main/default/objects/Policy__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>