force-app/main/default/objects/Policy__c/fields/Claim_credit_or_debit__c.field-meta.xml
<CustomField>
    <fullName>Claim_credit_or_debit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Claim credit or debit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>