force-app/main/default/objects/Policy__c/fields/Claim_credit_or_debit_Comment__c.field-meta.xml
<CustomField>
    <fullName>Claim_credit_or_debit_Comment__c</fullName>
    <label>Claim credit or debit Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>