force-app/main/default/objects/Policy__c/fields/Claims_Factor__c.field-meta.xml
<CustomField>
    <fullName>Claims_Factor__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Claims Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>