force-app/main/default/objects/Policy__c/fields/Client_Intake_New_Matter_Acceptance_Comm__c.field-meta.xml
<CustomField>
    <fullName>Client_Intake_New_Matter_Acceptance_Comm__c</fullName>
    <label>Client Intake/New Matter Acceptance Comm</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>