force-app/main/default/objects/Policy__c/fields/Client_Intake_New_Matter_Acceptance_Proc__c.field-meta.xml
<CustomField>
    <fullName>Client_Intake_New_Matter_Acceptance_Proc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Client Intake/New Matter Acceptance Proc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>