force-app/main/default/objects/Policy__c/fields/Clone_Application_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Clone_Application_Effective_Date__c</fullName>
    <label>Clone Application Effective Date</label>
    <type>Date</type>
</CustomField>