force-app/main/default/objects/Policy__c/fields/ClonedBy__c.field-meta.xml
<CustomField>
    <fullName>ClonedBy__c</fullName>
    <label>Cloned By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal 3 Months Before Policy Expiration</fullName>
            </value>
            <value>
                <fullName>Clone Opportunity With Application</fullName>
            </value>
            <value>
                <fullName>Clone Opportunity Without Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>