force-app/main/default/objects/Policy__c/fields/COL_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>COL_Sent_Date__c</fullName>
    <label>COL Sent Date</label>
    <type>Date</type>
</CustomField>