force-app/main/default/objects/Policy__c/fields/Conflict_Systems__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Systems__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Conflict Systems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>