force-app/main/default/objects/Policy__c/fields/Conflict_Systems_Comment__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Systems_Comment__c</fullName>
    <label>Conflict Systems Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>