force-app/main/default/objects/Policy__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>County</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>GEO_Factor__c.Master_Factor__r.Default__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Bypass_Default_County_Factor__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Source.Bypass_Default_County_Factor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>GEO_Factor__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>