force-app/main/default/objects/Policy__c/fields/Coverage_Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Factor_Value__c</fullName>
    <label>Limit Factor Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>