force-app/main/default/objects/Policy__c/fields/Create_Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Follow_Up_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Follow Up Task</label>
    <type>Checkbox</type>
</CustomField>