force-app/main/default/objects/Policy__c/fields/Current_Dividend_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Dividend_Year__c</fullName>
    <description>Static field to hold current dividend year</description>
    <formula>2021</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XXX Current Dividend Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>