force-app/main/default/objects/Policy__c/fields/Current_Primary__c.field-meta.xml
<CustomField>
    <fullName>Current_Primary__c</fullName>
    <label>Current Primary</label>
    <summarizedField>Policy_Lawyer__c.Primary__c</summarizedField>
    <summaryForeignKey>Policy_Lawyer__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>