force-app/main/default/objects/Policy__c/fields/DataLoader__c.field-meta.xml
<CustomField>
    <fullName>DataLoader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DataLoader</label>
    <type>Checkbox</type>
</CustomField>