force-app/main/default/objects/Policy__c/fields/Deductible__c.field-meta.xml
<CustomField>
    <fullName>Deductible__c</fullName>
    <formula>Deductible_ID__r.Name</formula>
    <label>Deductible</label>
    <type>Text</type>
</CustomField>