force-app/main/default/objects/Policy__c/fields/Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount__c</fullName>
    <label>Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>