force-app/main/default/objects/Policy__c/fields/Deductible_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Balance__c</fullName>
    <label>Deductible Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>