force-app/main/default/objects/Policy__c/fields/Deductible_Consumed_All_Claims__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Consumed_All_Claims__c</fullName>
    <label>Deductible Consumed (All Claims)</label>
    <summarizedField>Policy_Claim__c.Per_Claim_Deductible_Consumed__c</summarizedField>
    <summaryForeignKey>Policy_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>