force-app/main/default/objects/Policy__c/fields/Deductible_Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Factor_Value__c</fullName>
    <label>Deductible Factor Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>