force-app/main/default/objects/Policy__c/fields/Deductible_ID__c.field-meta.xml
<CustomField>
    <fullName>Deductible_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deductible</label>
    <referenceTo>Deductible_Factor__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>