force-app/main/default/objects/Policy__c/fields/Deductible_Reimburse__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Reimburse__c</fullName>
    <label>Deductible Reimburse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>