force-app/main/default/objects/Policy__c/fields/Deleted_Lawyer_Tally__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Lawyer_Tally__c</fullName>
    <formula>Deleted_Lawyer_Count__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deleted Lawyers (-#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>