force-app/main/default/objects/Policy__c/fields/Delta_Add_Delete_Lawyer_Count__c.field-meta.xml
<CustomField>
    <fullName>Delta_Add_Delete_Lawyer_Count__c</fullName>
    <formula>Added_Lawyer_Count__c +   Deleted_Lawyer_Tally__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Add Delete Lawyer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>