force-app/main/default/objects/Policy__c/fields/Dividend__c.field-meta.xml
<CustomField>
    <fullName>Dividend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dividend</label>
    <referenceTo>Dividend__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>