force-app/main/default/objects/Policy__c/fields/Dividend_Correction__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Correction__c</fullName>
    <description>Used to manually correct dividend value iof policy is a cancel/rewrite</description>
    <label>Dividend Cancel/Rewrite Correction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>