force-app/main/default/objects/Policy__c/fields/Dividend_Credit__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Credit__c</fullName>
    <label>XXX Dividend Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>