force-app/main/default/objects/Policy__c/fields/Dividend_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Eligible__c</fullName>
    <description>Determine if this policy is eligible for a dividend</description>
    <formula>(YEAR( Policy_Series_Effective_Date__c ) &lt;= (YEAR( Effective_Date__c ) - 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividend Eligible</label>
    <type>Checkbox</type>
</CustomField>