force-app/main/default/objects/Policy__c/fields/Dividend_Eligible_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Eligible_Next_Year__c</fullName>
    <description>Test if policy will be eligible for a dividend next year</description>
    <formula>(YEAR( Policy_Series_Effective_Date__c ) &lt;= (YEAR( Effective_Date__c ) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividend Eligible Next Year</label>
    <type>Checkbox</type>
</CustomField>